do force-sync when connecting to DB in test env = auto schema-load + clean

--- a/server/config/database.coffee.example
+++ b/server/config/database.coffee.example
@@ -7,3 +7,11 @@ exports.DBConfig =
     options:
       dialect: "postgres"
       port:    5432
+
+  test:
+    dbName:   "sea_blog_test"
+    user:     "user"
+    password: "password"
+    options:
+      dialect: "postgres"
+      port:    5432
