temporarily set 'npm test' to run only server-side tests

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "node_modules/.bin/brunch watch --server",
     "pretest": "node_modules/.bin/brunch build",
-    "test": "node_modules/.bin/mocha test/server && node_modules/.bin/karma start test/karma.conf.js && node_modules/.bin/karma start test/karma-e2e.conf.js"
+    "test": "node_modules/.bin/mocha test/server"
   },
   "dependencies": {
     "express": "~3.4.7",
