--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ matrix:
   allow_failures:
     - node_js: "0.11"
 
+env:
+  - NODE_ENV=test
+
 install:
   - npm install
   - ./node_modules/.bin/bower install
