--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": ""
   },
   "scripts": {
+    "preinstall": "npm install ./sequelize-tools/",
     "start": "node_modules/.bin/brunch watch --server",
     "pretest": "node_modules/.bin/brunch build",
     "test": "node_modules/.bin/mocha test/server && node_modules/.bin/karma start test/karma.conf.js && node_modules/.bin/karma start test/karma-e2e.conf.js"
