--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jade-angularjs-brunch": "~0.0.5",
     "karma": "~0.9.4",
     "karma-coffee-preprocessor": "~0.0.2",
-    "karma-ng-scenario": "~0.0.2",
+    "karma-ng-scenario": "0.1.0",
     "mocha": "~1.14.0",
     "expect.js": "~0.2.0",
     "request": "~2.27.0",
